# nacc-file-validator

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: mirror.yml
.gitlab/merge_request_templates/: default.md
fw_gear_file_validator/: __init__.py  env.py  errors.py  loader.py  main.py  parser.py  utils.py  validator.py
fw_gear_file_validator/flywheel_utils/: error_parsing.py  flywheel_env.py  flywheel_loaders.py  metadata_utils.py
fw_gear_file_validator/validator_utils/: file_loaders.py  validator.py
fw_gear_file_validator/validators/: factory.py  loaders.py  validator.py  validators.py
tests/: test_FwReference.py  test_caster.py  test_errors.py  test_integration.py  test_loader.py  test_parser.py  test_utils.py  test_validator.py  test_validator_csv.py  test_validator_json.py
tests/assets/: config.json  config_csv.json  integration_config.json  test_allOf_schema.json  test_input_invalid.csv  test_input_valid.csv  test_input_valid.json  test_schema.json  test_schema_csv.json
