[tool.poetry]
name = "fw_gear_file_validator"
version = "0.1.0"
description = "Validates a file"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/scientific-solutions/gears/file-validator"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
fw-file = "^2.1.1"
flywheel-gear-toolkit = "^0.6.10"
flywheel-sdk = "^16.16.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
