[tool.poetry]
name = "fw_gear_file_validator"
version = "0.2.4"
description = "Validates a file"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/scientific-solutions/gears/file-validator"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
fw-file = "^2.1.1"
flywheel-gear-toolkit = "^0.6.10"
flywheel-sdk = "17.7.0"
argparse = "1.4.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
